<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.strathfurnish.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.strathfurnish.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.example.strathfurnish.ui.wishlist.WishlistFragment"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.strathfurnish.ui.add.AddItemFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add_item" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.strathfurnish.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.strathfurnish.ui.auth.LoginFragment"
        android:label="Sign In"
        tools:layout="@layout/fragment_login" />
</navigation>